[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemies/moronster.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/enemydead.mp3" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "enemy",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.00002
height = 42.0

[sub_resource type="CircleShape2D" id=6]
radius = 24.7476

[node name="enemyfood" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 1.5, 1.5 )
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="EnemyFoodSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.643137, 0.670588, 0.682353, 1 )
position = Vector2( 0, -6 )
frames = SubResource( 4 )
animation = "enemy"

[node name="EnemyFoodCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1.04904e-05, 7.66667 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="DieArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="DieCollision" type="CollisionShape2D" parent="DieArea"]
shape = SubResource( 6 )

[node name="WalkTimer" type="Timer" parent="."]

[node name="EnemyCPUParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 2 )
emitting = false
amount = 1000
lifetime = 2.32
speed_scale = 3.78
emission_shape = 1
emission_sphere_radius = 10.86
direction = Vector2( 0, -1 )
spread = 94.37
gravity = Vector2( 0, 0 )
initial_velocity = 6.71
scale_amount = 0.51
scale_amount_random = 1.0
color = Color( 0.2, 0.533333, 0.258824, 1 )
hue_variation = -0.1

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="DieArea" to="." method="_on_DieArea_body_entered"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
